se agrego boton agregar

--- a/listarVenta.html
+++ b/listarVenta.html
@@ -26,6 +26,9 @@
                     Precio
                 </th>
                 <th scope="col">
+                    <a href="registrarVenta.html"><button >agregar</button></a>
+                </th>
+                <th scope="col">
                     Editar
                 </th>
                 <th scope="col">
