--- a/editarVenta.html
+++ b/editarVenta.html
@@ -6,7 +6,7 @@
     <title>Editar Clientes</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 </head>
-<body onload="editarVenta()">
+<body onload="editarVenta()" onload="cargarDatosdeApi()">
     
 
     <form id="form-editar">
@@ -27,7 +27,7 @@
             </div>
             <div class="form-group col-md-6">
               <label for="inputPassword4">Precio</label>
-              <input type="text" class="form-control" id="precio" >
+              <input type="text" class="form-control" id="precio_dolar" >
             </div>
           </div>
         
