--- a/listarVenta.html
+++ b/listarVenta.html
@@ -1,43 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-</head>
-<body onload="listarVentas()">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body onload="listarVentas()">
     <table class="table">
-        <thead class="thead-dark">
-            <tr>
-                <th scope="col">
-                    id
-                </th>
-                <th scope="col">
-                    Nombre
-                </th>
-                <th scope="col">
-                    Apellido
-                </th>
-                <th scope="col">
-                    Producto
-                </th>
-                <th scope="col">
-                    Precio
-                </th>
-                <th scope="col">
-                    Editar
-                </th>
-                <th scope="col">
-                    Eliminar
-                </th>
-            </tr>
-        </thead>
-        <tbody id="contenido">
-
-        </tbody>
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">id</th>
+          <th scope="col">Nombre</th>
+          <th scope="col">Apellido</th>
+          <th scope="col">Producto</th>
+          <th scope="col">Precio</th>
+          <th scope="col">Editar</th>
+          <th scope="col">Eliminar</th>
+        </tr>
+        <a href="registrarVenta.html"><button>agregar</button></a>
+      </thead>
+      <tbody id="contenido"></tbody>
     </table>
 
     <script src="/js/funciones.js"></script>
-</body>
+  </body>
 </html>
